istio/labs/3rd_party_jwt_azure_ad/authz.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "azure-jwt-authpolicy"
  namespace: learning
spec:
  selector:
    matchLabels:
      app: helloworld
  action: ALLOW
  rules:
  - from:
    - source:
        requestPrincipals: ["*"]
